--- a/php/2022.12.20.find-which-phpini-file-is-in-use.md
+++ b/php/2022.12.20.find-which-phpini-file-is-in-use.md
@@ -13,7 +13,7 @@ Additional .ini files parsed:      /usr/local/etc/php/conf.d/docker-php-ext-sodi
 root@52da70958491:/usr/local/etc/php# 
 ```
 
-```
+```bash
 root@52da70958491:/usr/local/etc/php# ll
 total 156
 drwxr-xr-x 1 root root  4096 Nov 29 03:26 .
@@ -24,15 +24,8 @@ drwxr-xr-x 1 root root  4096 Nov 29 03:26 conf.d
 root@52da70958491:/usr/local/etc/php#
 ```
 
-
+Copy one of the provided php.ini files to php.ini and make any needed adjustments.
 ```
-root@52da70958491:/usr/local/etc/php# ll
-total 156
-drwxr-xr-x 1 root root  4096 Nov 29 03:26 .
-drwxr-xr-x 1 root root  4096 Nov 29 03:26 ..
-drwxr-xr-x 1 root root  4096 Nov 29 03:26 conf.d
--rw-r--r-- 1 root root 72384 Nov 29 03:26 php.ini-development
--rw-r--r-- 1 root root 72530 Nov 29 03:26 php.ini-production
 root@52da70958491:/usr/local/etc/php# cp php.ini-development php.ini 
 root@52da70958491:/usr/local/etc/php# ll
 total 232
@@ -45,6 +38,7 @@ drwxr-xr-x 1 root root  4096 Nov 29 03:26 conf.d
 root@52da70958491:/usr/local/etc/php# 
 ```
 
+Restart the container. 
 ```
 root@52da70958491:/usr/local/etc/php# exit
 exit
@@ -53,6 +47,10 @@ php
 rob@xubuntu2004:~/html$ docker ps
 CONTAINER ID   IMAGE            COMMAND                  CREATED       STATUS          PORTS                               NAMES
 52da70958491   php:8.0-apache   "docker-php-entrypoi…"   2 weeks ago   Up 11 seconds   0.0.0.0:80->80/tcp, :::80->80/tcp   php
+```
+
+Verify the running container now has a loaded php.ini. 
+``	
 rob@xubuntu2004:~/html$ docker exec -it php bash
 root@52da70958491:/var/www/html# php --ini
 Configuration File (php.ini) Path: /usr/local/etc/php
@@ -62,3 +60,4 @@ Additional .ini files parsed:      /usr/local/etc/php/conf.d/docker-php-ext-sodi
 
 root@52da70958491:/var/www/html# 
 ```
+
