bash/1672248277.check-if-string-contains-substring-in-bash.md

--- a/bash/1672248277.check-if-string-contains-substring-in-bash.md
+++ b/bash/1672248277.check-if-string-contains-substring-in-bash.md
@@ -13,3 +13,13 @@ if [[ "$STR" == *"$SUB2"* ]]; then
 fi 
 ```
 
+```
+STR='Star Wars: The Empire Strikes Back'
+SUB1='Empire'
+
+if grep -q "$SUB1" <<< "$STR"; then 
+  echo '1'
+fi
+```
+
+
