1672255608.aws-ecr-list-repositories.md

--- a/aws/ecr/1672255608.aws-ecr-list-repositories.md
+++ b/aws/ecr/1672255608.aws-ecr-list-repositories.md
@@ -1,3 +1,4 @@
+```bash
 REGION='us-east-1'
 AWSCLI_PROFILE_NAME=''
 REPO_PREFIX=''   # given that all repos start with the same prefix
@@ -6,4 +7,4 @@ aws ecr describe-repositories --profile ${AWSCLI_PROFILE_NAME} --region ${REGION
 echo
 aws ecr describe-repositories --profile ${AWSCLI_PROFILE_NAME} --region ${REGION} | jq .repositories | jq .[] | jq .repositoryArn | sort  | sed -e 's/\"//g' | grep ${REPO_PREFIX}
 exit
-
+```
