git/1672941611.specify-ssh-key.md

--- a/git/1672941611.specify-ssh-key.md
+++ b/git/1672941611.specify-ssh-key.md
@@ -6,3 +6,10 @@ Host <FQDN>
     IdentityFile ~/.ssh/<KEY_FILE>
     IdentitiesOnly yes
 ```
+
+example:
+```
+Host github.com
+    IdentityFile ~/.ssh/github.id_rsa
+    IdentitiesOnly yes
+```
