1672085858.create-and-mount-luks-disk-image-file.md

--- a/linux/1672085858.create-and-mount-luks-disk-image-file.md
+++ b/linux/1672085858.create-and-mount-luks-disk-image-file.md
@@ -1,17 +1,23 @@
 
+create the disk image and mount point
 ```
-dd if=/dev/zero of=data-ro-001.img bs=1G count=128
-mkdir data-ro-001
-sudo cryptsetup --key-file=<PATH_TO_KEYFILE> luksFormat -c aes -s 256 data-ro-001.img
-```
-
-```
-sudo cryptsetup --key-file=<PATH_TO_KEYFILE> luksOpen data-ro-001.img data-ro-001   #data-ro-001 is the /dev/mapper device file created
-sudo mount /dev/mapper/data-ro-001 <PATH_TO_IMG_FILE>
-sudo chown
+dd if=/dev/zero of=${HOME}/edisk1.img bs=1G count=8
+sudo cryptsetup -y luksFormat ${HOME}/edisk1.img  
+sudo cryptsetup luksOpen ${HOME}/edisk1.img edisk1 
+sudo mkfs.xfs /dev/mapper/edisk1 
+sudo cryptsetup luksClose edisk1 
+sudo mkdir /mnt/edisk1
 ```
 
+mount the disk image
 ```
-sudo umount data-ro-001
-sudo cryptsetup luksClose data-ro-001
+sudo cryptsetup luksOpen ${HOME}/edisk1.img edisk1 
+sudo mount /dev/mapper/edisk1 /mnt/edisk1
+sudo chown -R 1000:1000 /mnt/edisk1
+```
+
+unmount the disk image
+```
+sudo umount /mnt/edisk1
+sudo cryptsetup luksClose edisk1 
 ```
